@@ -1,3 +1,9 @@
+Tue May  3 14:03:32 UTC 2011  Byron Harris  <harrisb@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
+
+          Another auto-generated update due to shared wdlQosPolicy addition.
+
 Tue May  3 13:25:20 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfmap:
